2001-05-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_paragraphs): Transform BUILD, HOST and TARGET.
	(&handle_tests_dejagnu, &define_standard_variables): Don't.
	(&define_standard_variables): Don't transform %top_builddir% since...
	* header-vars.am: Use %TOPDIR% instead.

2001-05-09  Akim Demaille  <akim@epita.fr>

	* automake.in (@objects): Remove, unused.
	Remove all the code related to it, and to former `$(OBJECTS)'.

2001-05-08  Tom Tromey  <tromey@redhat.com>

	For PR automake/29:
	* ylwrap: Handle arguments to program.  Remove old code that tried
	to avoid absolute paths and add new code to do it in all cases.
	Removed ancient logic that tried to deal with relative path.
	* tests/Makefile.am (TESTS): Added yacc4.test.
	* tests/yacc4.test: New file.

	Fix for PR automake/149 and werror.test:
	* automake.in (require_file_internal): Use am_line_warning or
	am_conf_line_warning when suppressing error.
	(am_line_warning): New sub.
	(am_conf_line_warning): Save and restore warning signal.
	* tests/Makefile.am (XFAIL_TESTS): Removed werror.test.

	Fix for PR automake/36:
	* tests/Makefile.am (TESTS): Added asm.test.
	* tests/asm.test: New file.
	* automake.in (asm): Use ASFLAGS and AS.
	(lang_asm_finish): New sub.

	* automake.in (read_am_file): Removed debugging code.

	For PR automake/149:
	* tests/Makefile.am (TESTS): Added werror.test.
	(XFAIL_TESTS): Likewise.
	* tests/werror.test: New file.

	* automake.in (conditional_true_when): Don't return if we see
	`TRUE'.

	* tests/objc.test: Removed.
	* tests/Makefile.am (XFAIL_TESTS): Removed objc.test.
	(TESTS): Likewise.

	* automake.in (subst): New sub.
	(handle_languages): Use it.
	(output_lex_build_rule): Likewise; also use _am_quote.
	(check_libobjs_sources): Likewise.
	(make_paragraphs): Use subst.

	* automake.in (check_libobjs_sources): Re-fixed AMDEP_TRUE
	problem.

	* automake.in (file_contents_internal): Prototype now `$$%'.
	(register_language): Prototype now `%'.
