@@ -1,5 +1,10 @@
 2001-05-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in: Remove some code left from bad patches.
+	(&handle_dependency): Remove, for the same reason.
+
+2001-05-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&make_paragraphs): Transform BUILD, HOST and TARGET.
 	(&handle_tests_dejagnu, &define_standard_variables): Don't.
 	(&define_standard_variables): Don't transform %top_builddir% since...
